# stargazer_ros

./: .gitignore  CMakeLists.txt  README.md
cfg/: LandmarkFinderInterface.cfg
launch/: bag2bag.launch  landmark_calibrator.launch  landmark_finder_node.launch  landmark_finder_nodelet.launch  landmark_localizer_node.launch  landmark_localizer_nodelet.launch  landmark_visualizer.launch  offline_pose_visualizer.launch  offline_reprojection_visualizer.launch  stargazer_demo.launch  stargazer_nodelets.launch  stargazer_nodes.launch  stargazer_visualization.launch
msg/: Landmark.msg
param/: cam.yaml  landmark_finder.yaml  map.yaml
src/: StargazerConversionMethods.h  ros_utils.h
src/landmark_calibrator/: LandmarkCalibratorInterface.cpp  LandmarkCalibratorInterface.h  LandmarkCalibratorInterfaceParameters.cpp  LandmarkCalibratorInterfaceParameters.h  landmark_calibrator_node.cpp
src/landmark_finder/: LandmarkFinderInterface.cpp  LandmarkFinderInterface.h  LandmarkFinderInterfaceParameters.cpp  LandmarkFinderInterfaceParameters.h  landmark_finder_node.cpp  landmark_finder_nodelet.cpp
src/landmark_localizer/: LandmarkLocalizerInterface.cpp  LandmarkLocalizerInterface.h  LandmarkLocalizerInterfaceParameters.cpp  LandmarkLocalizerInterfaceParameters.h  landmark_localizer_node.cpp  landmark_localizer_nodelet.cpp
src/landmark_visualizer/: LandmarkVisualizerParameters.cpp  LandmarkVisualizerParameters.h  landmark_visualizer.cpp
src/pose_visualizer/: PoseVisualizerParameters.cpp  PoseVisualizerParameters.h  pose_visualizer.cpp
src/reprojection_visualizer/: ReprojectionVisualizer.cpp  ReprojectionVisualizer.h  ReprojectionVisualizerParameters.cpp  ReprojectionVisualizerParameters.h  reprojection_visualizer_node.cpp
stargazer_interfaces/: CMakeLists.txt  package.xml
stargazer_interfaces/msg/: Landmark.msg  LandmarkArray.msg
stargazer_ros/: CMakeLists.txt  README.md  package.xml
stargazer_ros/launch/: bag2bag.launch.py  extrinsic_calibration.launch.py  landmark_calibrator.launch.py  landmark_finder_node.launch.py  landmark_localizer_node.launch.py  landmark_visualizer.launch.py  offline_pose_visualizer.launch.py  offline_reprojection_visualizer.launch.py  offline_stargazer_visualization.launch  offline_stargazer_visualization.launch.py  stargazer_demo.launch.py  stargazer_nodes.launch.py
stargazer_ros/param/: landmark_finder.yaml  map.yaml
stargazer_ros/src/: StargazerConversionMethods.h
stargazer_ros/src/landmark_calibrator/: CMakeLists.txt  LandmarkCalibratorInterface.cpp  LandmarkCalibratorInterface.h  landmark_calibrator_node.cpp  landmark_calibrator_parameters.yaml
stargazer_ros/src/landmark_finder/: CMakeLists.txt  LandmarkFinderInterface.cpp  LandmarkFinderInterface.h  landmark_finder_node.cpp  landmark_finder_parameters.yaml
stargazer_ros/src/landmark_localizer/: CMakeLists.txt  LandmarkLocalizerInterface.cpp  LandmarkLocalizerInterface.h  landmark_localizer_node.cpp  landmark_localizer_parameters.yaml
stargazer_ros/src/landmark_visualizer/: CMakeLists.txt  landmark_visualizer.cpp  landmark_visualizer_parameters.yaml
stargazer_ros/src/pose_visualizer/: CMakeLists.txt  pose_visualizer.cpp  pose_visualizer_parameters.yaml
stargazer_ros/src/reprojection_visualizer/: CMakeLists.txt  ReprojectionVisualizer.cpp  ReprojectionVisualizer.h  reprojection_visualizer_node.cpp  reprojection_visualizer_parameters.yaml
